src/objects/Service_Catalog_Entry_Ratings__c.object
<CustomObject>
    <fields>
        <fullName>Capability_Rating_Level__c</fullName>
        <inlineHelpText>This is a 5 star rating system with 0 being the worst and 5 being the best score.</inlineHelpText>
        <label>Capability Rating Level</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <inlineHelpText>Provide Feedback on the capability rating you provided.</inlineHelpText>
        <label>Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rating_Sum_Hold__c</fullName>
        <formula>VALUE(TEXT(Capability_Rating_Level__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating Sum Hold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Star_Rating_Indicator__c</fullName>
        <formula>IMAGE( 
CASE(Capability_Rating_Level__c,
&quot;0&quot;, &quot;/img/samples/stars_000.gif&quot;,  
&quot;1&quot;, &quot;/img/samples/stars_100.gif&quot;, 
&quot;2&quot;, &quot;/img/samples/stars_200.gif&quot;, 
&quot;3&quot;, &quot;/img/samples/stars_300.gif&quot;, 
&quot;4&quot;, &quot;/img/samples/stars_400.gif&quot;, 
&quot;5&quot;, &quot;/img/samples/stars_500.gif&quot;, 
&quot;/img/samples/stars_000.gif&quot;), 
&quot;rating&quot;)</formula>
        <label>Star Rating Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology_Service_Catalog_Entry__c</fullName>
        <label>Technology Service Catalog Entry</label>
        <referenceTo>Service_Catalog_Entry__c</referenceTo>
        <relationshipLabel>Customer Ratings</relationshipLabel>
        <relationshipName>Service_Catalog_Entry_Ratings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Customer Rating</label>
    <nameField>
        <displayFormat>Rating-{0}</displayFormat>
        <label>Service Catalog Entry Ratings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Ratings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>